StreamWork/wwwroot/css/site.css
﻿html
{
    width: 100%;
    height: 100%;
}
.full-page {
    width: 100%;
    height: 100%;
}
.in-page {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}
.page-body {
    flex-shrink: 0;
    flex-grow: 1;
}
.page-footer {
    flex-shrink: 0;
    text-align: center;
    font-size: 10px;
}
vbody{
    margin:0;
}
.body-right {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    
}
.body-center2 {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: -2%;
}
.body-center3{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 2%;
}
.body-center4 {
    display: flex;
    align-items: center;
    justify-content: center;
    margin:2%
}
.buttonStyle {
    height: 35px;
    border-radius: 5px;
    width: 130px;
    background-color: #008080;
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size:11px;
    border:none;
}
.buttonStyleWhite {
    height: 35px;
    border-radius: 5px;
    width: 130px;
    background-color: #FFFFFF;
    color: black;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border: none;
}
.buttonInside {
    position: relative;
    margin-bottom: 10px;
}
.buttonStyle24 {
    height: 50px;
    border-radius: 5px;
    width: 135px;
    background-color: #008080;
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border: none;
}
.buttonStyles1 {
    height: 25px;
    border-radius: 5px;
    width: 75px;
    background-color: #008080;
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border: none;
}
.buttonStyles {
    height: 35px;
    border-radius: 5px;
    width: 250px;
    background-color: #008080;
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border: none;
}
.buttonStyleStudent {
    height: 20px;
    border-radius: 5px;
    width: 50px;
    background-color: #008080;
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size:8px;
    border: none;
}
.buttonStyleLogin {
    height: 35px;
    border-radius: 5px;
    width: 115px;
    background-color:white;
    color: black;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border-color: black;
    border-width:thin
}
.buttonStyleLogin24 {
    height: 50px;
    border-radius: 5px;
    width: 150px;
    background-color: white;
    color: black;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border-color: black;
    border-width: thin
}
.buttonStyletutor {
    height: 35px;
    border-radius: 5px;
    width: 160px;
    font-size: 10px;
    background-color: #008080;
    color: white;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border: none;
}

.buttonStyleLearning {
    height: 35px;
    border-radius: 5px;
    width: 170px;
    background-color: transparent;
    color: #008080;
    font-family: 'Roboto', sans-serif;
    font-size: 11px;
    border: none;
}
.buttonStylePages{
    height: 35px;
    border-radius: 5px;
    width: 130px;
    background-color: transparent;
    color: #008080;
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
    border: none;
}
.buttonStylePages2 {
    height: 35px;
    border-radius: 5px;
    width: 170px;
    background-color: transparent;
    color: #008080;
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
    border: none;
}

.hr1 {
    border: none;
    border-left: 1px solid hsla(200, 10%, 50%,100);
    height: 100vh;
    width: 1px;
}
.dot {
    height: 85px;
    width: 85px;
    border: 1px solid;
    border-color: #000000;
    border-radius:50%;
    align-items:center;
}
.rectangle {
    height: 175px;
    width: 200px;
    background-color: #bbb;
}
.hello {
    height: 175px;
    width: 200px;
    background-color: #bbb;
}
.vl {
    border-left: 1px solid black;
    height: 40px;
}
.break{
    word-wrap:break-word;
}
.test {
    width: 270px;
    height: 320px;
    background-color: yellow;
}
.dot2 {
    height: 85px;
    width: 125px;
    border: 1px solid;
    border-color: #000000;
    border-radius: 50%;
    align-items: center;
}
.dot3 {
    height: 55px;
    width: 75px;
    background-color: #bbb;
    border-radius: 50%;
}
.dot4 {
    height:60px;
    width: 60px;
    border: 1px solid;
    border-color: #000000;
    border-radius: 50%;
}
.topnav input[type=text] {
  width:400px;
  height:50px;
}
.topnav input[type=text] {
    border: 1px solid #ccc;
}
.streamButtonStyle {
    width:260px;
    height:175px;
}
.wrapper {
    display: flex;
    width: 100%;
}

#sidebar {
    width: 250px;
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    z-index: 999;
    background: #7386D5;
    color: #fff;
    transition: all 0.3s;
}
.form-sign {
    width: 100%;
    max-width: 330px;
    padding: 15px;
    margin: 0 auto;
}

.sidenav {
    height: 100%;
    width: 160px;
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
    background-color: #111;
    overflow-x: hidden;
    padding-top: 20px;

}

lds-dual-ring {
    display: block;
    width: 100px;
    height: 100px;
}

.lds-dual-ring:after {
    content: " ";
    display: block;
    width: 100px;
    height: 100px;
    margin-left: 35%;
    border-radius: 50%;
    border: 5px solid black;
    border-color: black transparent black transparent;
    animation: lds-dual-ring 1.2s linear infinite;
}

.bordered-image {
    border-width: 2px;
    border-color: black;
    border-style: solid;
}

@keyframes lds-dual-ring {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
    
}

.upload-uploadbtn-wrapper {
    position: relative;
    overflow: hidden;
    display: inline-block;
}

.uploadbtn {
    border: 2px solid #006565;
    color: #006565;
    background-color: white;
    padding: 8px 20px;
    border-radius: 8px;
    font-size: 20px;
    font-weight: bold;
}


.upload-uploadbtn-wrapper input[type=file] {
    font-size: 100px;
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;

}

.edit-editbtn-wrapper {
    position: relative;
    overflow: hidden;
    display: inline-block;
}

.editbtn {
    border: 2px solid #006565;
    color: #006565;
    background-color: white;
    padding: 8px 20px;
    border-radius: 8px;
    font-size: 20px;
    font-weight: bold;
}

.loaderTutor {
    border: 16px solid black; /* Light grey */
    border-top: 16px solid #008080; /* Blue */
    border-radius: 50%;
    width: 60px;
    height: 60px;
    animation: spin 1s linear infinite;
}

.loaderStudent {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #008080; /* Blue */
    border-radius: 50%;
    width: 60px;
    height: 60px;
    animation: spin 1s linear infinite;
}

.loader {
    border: 16px solid black; /* Light grey */
    border-top: 16px solid #008080; 
    border-radius: 50%;
    width: 50px;
    height: 50px;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

